[gd_scene load_steps=47 format=2]

[ext_resource path="res://image/bst1_d.png" type="Texture" id=1]
[ext_resource path="res://image/inventory.png" type="Texture" id=2]
[ext_resource path="res://image/bst2.png" type="Texture" id=3]
[ext_resource path="res://image/bst.png" type="Texture" id=4]
[ext_resource path="res://image/massage_box.png" type="Texture" id=5]
[ext_resource path="res://image/bst_d.png" type="Texture" id=6]
[ext_resource path="res://image/bst2_d.png" type="Texture" id=7]
[ext_resource path="res://image/curtain2.png" type="Texture" id=8]
[ext_resource path="res://LifeBar.gd" type="Script" id=9]
[ext_resource path="res://image/bst1.png" type="Texture" id=10]
[ext_resource path="res://MessageBox.gd" type="Script" id=11]
[ext_resource path="res://UI.gd" type="Script" id=12]
[ext_resource path="res://Dungeonlevel.gd" type="Script" id=13]
[ext_resource path="res://XpBar.gd" type="Script" id=14]
[ext_resource path="res://image/item_back.png" type="Texture" id=15]
[ext_resource path="res://image/Roboto-Regular.ttf" type="DynamicFontData" id=16]
[ext_resource path="res://transiton.shader" type="Shader" id=17]
[ext_resource path="res://image/Thintel.ttf" type="DynamicFontData" id=18]
[ext_resource path="res://Transition.tscn" type="PackedScene" id=19]
[ext_resource path="res://SkillUI.tscn" type="PackedScene" id=20]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.384314, 0.776471, 0.552941, 0.996078 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.247059, 0.0862745, 0.337255, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Animation" id=3]
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.09, 0.14, 0.19 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 4, 4, 4, 1 ), Color( 1, 1, 1, 1 ), Color( 4, 4, 4, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.04, 0.09, 0.14, 0.19 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 0 ), Vector2( 0, 1 ), Vector2( -1, -1 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureRect:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.29 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 6 ), ExtResource( 4 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "damage1"
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.041, 0.09, 0.14, 0.19 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 4, 4, 1.7, 1 ), Color( 1, 1, 1, 1 ), Color( 4, 4, 1.7, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.04, 0.09, 0.14, 0.2, 0.26 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -16 ), Vector2( 1, 0 ), Vector2( 0, 1 ), Vector2( -1, -1 ), Vector2( 1, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureRect:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.29 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 10 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "damage2"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.09, 0.14, 0.19 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 4, 0.7, 4, 1 ), Color( 1, 1, 1, 1 ), Color( 4, 0.7, 4, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.04, 0.09, 0.14, 0.19 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 0 ), Vector2( 0, 1 ), Vector2( -1, -1 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureRect:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.29 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 7 ), ExtResource( 3 ) ]
}

[sub_resource type="Animation" id=6]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_styles/fg:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.384314, 0.776471, 0.552941, 0.996078 ), Color( 0.776471, 0.384314, 0.6, 0.996078 ), Color( 0.384314, 0.776471, 0.552941, 0.996078 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureRect:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TextureRect:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}

[sub_resource type="Animation" id=7]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_styles/fg:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.384314, 0.776471, 0.552941, 0.996078 ), Color( 0.384314, 0.698039, 0.776471, 0.996078 ), Color( 0.384314, 0.776471, 0.552941, 0.996078 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureRect:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TextureRect:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}

[sub_resource type="Animation" id=8]
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_styles/fg:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.384314, 0.776471, 0.552941, 0.996078 ), Color( 0.721569, 0.776471, 0.384314, 0.996078 ), Color( 0.384314, 0.776471, 0.552941, 0.996078 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureRect:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TextureRect:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 10 ) ]
}

[sub_resource type="DynamicFont" id=9]
extra_spacing_char = 2
font_data = ExtResource( 18 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.392157, 0.384314, 0.776471, 0.996078 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.0745098, 0.192157, 0.121569, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="DynamicFont" id=12]
size = 10
outline_size = 1
outline_color = Color( 1, 1, 1, 0.443137 )
extra_spacing_bottom = -6
font_data = ExtResource( 16 )

[sub_resource type="DynamicFontData" id=13]
font_path = "res://image/mplus-2m-bold.ttf"

[sub_resource type="DynamicFont" id=14]
use_mipmaps = true
extra_spacing_char = 1
font_data = ExtResource( 18 )
fallback/0 = SubResource( 13 )

[sub_resource type="DynamicFontData" id=15]
hinting = 1
font_path = "res://image/Thintel.ttf"

[sub_resource type="DynamicFont" id=16]
use_mipmaps = true
extra_spacing_space = 1
font_data = SubResource( 15 )

[sub_resource type="DynamicFont" id=17]
size = 11
extra_spacing_bottom = -6
font_data = ExtResource( 16 )

[sub_resource type="Animation" id=18]
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/Transition:material:shader_param/cutoff")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer/Transition:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer/CenterContainer/Load:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=19]
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/Transition:material:shader_param/cutoff")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer/Transition:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer/CenterContainer/Nextlevel:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=20]
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/Transition:material:shader_param/cutoff")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer/Transition:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer/CenterContainer/Save:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="ShaderMaterial" id=26]
shader = ExtResource( 17 )
shader_param/cutoff = 0.0
shader_param/smooth_size = 0.351
shader_param/mask = ExtResource( 8 )

[sub_resource type="DynamicFont" id=21]
size = 33
outline_size = 1
outline_color = Color( 0.827451, 0.247059, 0.247059, 0.839216 )
use_mipmaps = true
extra_spacing_char = 1
font_data = ExtResource( 18 )

[sub_resource type="DynamicFont" id=22]
size = 33
outline_size = 1
outline_color = Color( 0.14902, 0.690196, 0.533333, 0.835294 )
extra_spacing_bottom = -6
extra_spacing_char = 1
font_data = ExtResource( 18 )

[sub_resource type="DynamicFontData" id=23]
font_path = "res://image/Gugi-Regular.ttf"

[sub_resource type="DynamicFont" id=24]
size = 11
outline_size = 1
outline_color = Color( 0.490196, 0.745098, 0.52549, 1 )
font_data = SubResource( 23 )

[sub_resource type="DynamicFont" id=25]
size = 15
outline_size = 1
outline_color = Color( 0.490196, 0.745098, 0.52549, 1 )
font_data = SubResource( 23 )

[node name="UI" type="CanvasLayer"]
script = ExtResource( 12 )

[node name="SkillUI" parent="." instance=ExtResource( 20 )]

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 6, 424 )

[node name="LifeBar" type="ProgressBar" parent="Position2D" groups=["lifebar"]]
modulate = Color( 2.5, 2.5, 2.5, 1 )
anchor_bottom = 1.0
margin_left = 0.5
margin_right = 100.5
margin_bottom = 16.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 16 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 0.0
percent_visible = false
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Position2D/LifeBar"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Position2D/LifeBar"]
anims/damage = SubResource( 3 )
anims/damage1 = SubResource( 4 )
anims/damage2 = SubResource( 5 )
anims/danger = SubResource( 6 )
anims/normal = SubResource( 7 )
anims/warning = SubResource( 8 )

[node name="TextureRect" type="TextureRect" parent="Position2D/LifeBar"]
visible = false
margin_left = -2.0
margin_top = -24.0
margin_right = 15.0
margin_bottom = -12.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Position2D/LifeBar"]
anchor_left = 0.04
anchor_top = 0.251
anchor_right = 0.16
anchor_bottom = 0.485
rect_clip_content = true
size_flags_stretch_ratio = 20.0
custom_colors/font_color = Color( 0.607843, 0.419608, 0.623529, 1 )
custom_fonts/font = SubResource( 9 )
text = "HP"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="XpBar" type="ProgressBar" parent="Position2D" groups=["xpbar"]]
margin_top = 16.0
margin_right = 100.0
margin_bottom = 26.0
rect_scale = Vector2( 2, 2 )
custom_styles/fg = SubResource( 10 )
custom_styles/bg = SubResource( 11 )
percent_visible = false
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="Position2D/XpBar"]
margin_left = 6.0
margin_top = -46.0
margin_right = 42.0
margin_bottom = -34.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 12 )
text = "LEVEL 1"

[node name="STR" type="Label" parent="Position2D/XpBar"]
margin_left = 32.0
margin_top = -29.0
margin_right = 58.0
margin_bottom = -17.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 12 )
text = "STR 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DEF" type="Label" parent="Position2D/XpBar"]
margin_left = 32.0
margin_top = -23.0
margin_right = 59.0
margin_bottom = -11.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 12 )
text = "DEF 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Position2D/XpBar"]
anchor_left = 0.04
anchor_top = 0.285714
anchor_right = 0.23
anchor_bottom = 1.07143
rect_scale = Vector2( 0.5, 0.5 )
rect_clip_content = true
size_flags_stretch_ratio = 20.0
custom_colors/font_color = Color( 0.890196, 0.792157, 0.898039, 1 )
custom_fonts/font = SubResource( 9 )
text = "EXP"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MessageBox" type="TextureRect" parent="Position2D" groups=["message"]]
modulate = Color( 0.266667, 0.309804, 0.341176, 0.65098 )
margin_top = 34.0
margin_right = 256.0
margin_bottom = 90.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
expand = true
script = ExtResource( 11 )

[node name="TextureRect" type="TextureRect" parent="Position2D/MessageBox"]
visible = false
margin_left = 100.0
margin_top = -228.0
margin_right = 400.0
margin_bottom = -28.0
mouse_filter = 2
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Log" type="RichTextLabel" parent="Position2D/MessageBox/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -148.5
margin_top = -97.5
margin_right = 148.5
margin_bottom = 97.5
custom_colors/default_color = Color( 3, 3, 3, 1 )
custom_fonts/normal_font = SubResource( 14 )
bbcode_enabled = true
bbcode_text = "You entered the dungeon"
text = "You entered the dungeon"
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Position2D/MessageBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 3.0
margin_bottom = -2.0
custom_colors/default_color = Color( 4, 4, 4, 1 )
custom_fonts/normal_font = SubResource( 16 )
bbcode_text = "You entered the dungeon"
tab_size = 5
text = "You entered the dungeon"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 893.0
margin_top = 537.0
margin_right = 1009.0
margin_bottom = 565.0
custom_fonts/font = SubResource( 17 )
text = "Inventory Key I
Pick up Item Key G"

[node name="Dungeonlevel" type="Label" parent="."]
margin_left = 8.0
margin_top = 10.0
margin_right = 112.0
margin_bottom = 27.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 17 )
text = "Dungeon Level 1"
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Dungeonlevel"]
anims/LOAD = SubResource( 18 )
anims/Next = SubResource( 19 )
anims/SAVE = SubResource( 20 )

[node name="CenterContainer" type="CenterContainer" parent="Dungeonlevel/AnimationPlayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Save" type="Label" parent="Dungeonlevel/AnimationPlayer/CenterContainer"]
visible = false
modulate = Color( 0.972549, 0.972549, 0.972549, 1 )
margin_left = 484.0
margin_top = 275.0
margin_right = 539.0
margin_bottom = 300.0
rect_pivot_offset = Vector2( 1408, -323 )
text = "SAVE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nextlevel" type="Label" parent="Dungeonlevel/AnimationPlayer/CenterContainer"]
visible = false
margin_left = 455.0
margin_top = 275.0
margin_right = 568.0
margin_bottom = 300.0
text = "Next Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="Label" parent="Dungeonlevel/AnimationPlayer/CenterContainer"]
visible = false
margin_left = 481.0
margin_top = 260.0
margin_right = 542.0
margin_bottom = 316.0
text = "LOAD
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Transition" parent="Dungeonlevel/AnimationPlayer" instance=ExtResource( 19 )]
visible = false
material = SubResource( 26 )
mouse_filter = 2

[node name="Wepon" type="TextureRect" parent="."]
visible = false
margin_left = 13.0
margin_top = 282.0
margin_right = 45.0
margin_bottom = 314.0

[node name="Wepon_t" type="Label" parent="Wepon"]
margin_left = -2.0
margin_top = -14.0
margin_right = 70.0
margin_bottom = 16.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 21 )
text = "Weapon"
align = 1

[node name="ColorRect2" type="TextureRect" parent="Wepon"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 15 )

[node name="Armor" type="TextureRect" parent="."]
visible = false
margin_left = 12.0
margin_top = 261.0
margin_right = 44.0
margin_bottom = 293.0

[node name="Skill" type="Label" parent="Armor"]
margin_top = -12.0
margin_right = 64.0
margin_bottom = 18.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 22 )
text = "Skill 1"
align = 1

[node name="ColorRect" type="TextureRect" parent="Armor"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 15 )

[node name="pops" type="TextureRect" parent="."]
visible = false
margin_left = 60.0
margin_top = 292.0
margin_right = 244.0
margin_bottom = 374.0
texture = ExtResource( 2 )
expand = true
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="pops"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.0
margin_top = -4.0
margin_right = -2.0
margin_bottom = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="pops/CenterContainer"]
margin_left = 14.0
margin_top = 33.0
margin_right = 172.0
margin_bottom = 62.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="pops/CenterContainer/VBoxContainer"]
margin_right = 158.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 24 )
text = " Left Click : item use or epuip"

[node name="Label2" type="Label" parent="pops/CenterContainer/VBoxContainer"]
margin_top = 17.0
margin_right = 158.0
margin_bottom = 29.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 24 )
text = "      Right Click : Drop item"

[node name="pops2" type="TextureRect" parent="."]
visible = false
margin_left = 52.0
margin_top = 300.0
margin_right = 236.0
margin_bottom = 374.0
texture = ExtResource( 2 )
expand = true
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="pops2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.0
margin_top = -4.0
margin_right = -2.0
margin_bottom = -2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="pops2/CenterContainer"]
margin_left = 21.0
margin_top = 30.0
margin_right = 164.0
margin_bottom = 46.0
custom_colors/font_color = Color( 0.807843, 0.0313726, 0.0313726, 1 )
custom_fonts/font = SubResource( 25 )
text = "Click on the enemy!"
